--- a/.github/workflows/gcpcicd.yaml
+++ b/.github/workflows/gcpcicd.yaml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  image: gcpsantanubhunia/your_image_name:latest
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,20 +16,19 @@ jobs:
     steps:
     - uses: actions/checkout@v4 # Checks out your repository code
     
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
       with:
-        dotnet-version: '8.0.x' # Specify your desired .NET SDK version
-        
-    - name: Restore dependencies
-      run: dotnet restore
-      
-    - name: Build
-      run: dotnet build --no-restore
-      
-    - name: Run Run
-      run: dotnet run
-      
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: gcpsantanubhunia/dotnetapp:v3
+
   # Optional: Add a deployment job if you want to deploy to a specific environment
   # deploy:
   #   needs: build-and-test # Ensures deployment only runs after successful build and tests
