--- a/.github/workflows/gcpcicd.yaml
+++ b/.github/workflows/gcpcicd.yaml
@@ -7,7 +7,8 @@ on:
     branches: [ main ]
 
 env:
-  image: gcpsantanubhunia/dotnetapp:v4
+  docker_username: ${{ secrets.DOCKER_USERNAME }}
+  image: ${{ env.docker_username }}/dotnetapp:v4
 
 jobs:
   build:
@@ -19,7 +20,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
+        username: ${{ secrets.env }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
@@ -27,7 +28,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: $env.image
+        tags: ${{ env.image }}
 
   # Optional: Add a deployment job if you want to deploy to a specific environment
   # deploy:
