--- a/.github/workflows/gcpcicd.yaml
+++ b/.github/workflows/gcpcicd.yaml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 env:
-  docker_username: ${{ secrets.DOCKER_USERNAME }}
+  docker_username: ${{ env.DOCKER_USERNAME }}
   image: ${{ secrets.DOCKER_USERNAME }}/dotnetapp:v4
 
 jobs:
@@ -21,6 +21,7 @@ jobs:
       run: |
         echo "$docker_username"
         echo "$image"
+        echo "${{ env.DOCKER_USERNAME }}"
     
     # - name: Log in to Docker Hub
     #   uses: docker/login-action@v3
