--- a/.github/workflows/gcpcicd.yaml
+++ b/.github/workflows/gcpcicd.yaml
@@ -24,6 +24,7 @@ jobs:
         echo "$image"
         echo "${{ env.DOCKER_USERNAME }}"
         echo "The value is: ${{ env.MY_CUSTOM_VARIABLE }}"
+        echo "Repo setting: ${{ vars.MY_REPO_VARIABLE }}"
     
     # - name: Log in to Docker Hub
     #   uses: docker/login-action@v3
