--- a/.github/workflows/gcpcicd.yaml
+++ b/.github/workflows/gcpcicd.yaml
@@ -7,9 +7,8 @@ on:
     branches: [ main ]
 
 env:
-  docker_username: ${{ vars.DOCKER_USERNAME }}
-  image: ${{ secrets.DOCKER_USERNAME }}/dotnetapp:v4
-  MY_CUSTOM_VARIABLE: "Hello from workflow!"
+  docker_username: ${{ secrets.DOCKER_USERNAME }}
+  image: gcpsantanubhunia/dotnetapp:v4
 
 jobs:
   build:
@@ -20,12 +19,9 @@ jobs:
 
     - name: Use variable
       run: |
-        echo "$docker_username"
-        
+        echo "$docker_username"        
         echo "$image"
-        echo "${{ env.DOCKER_USERNAME }}"
-        echo "The value is: ${{ env.MY_CUSTOM_VARIABLE }}"
-        echo "Repo setting: ${{ vars.MY_REPO_VARIABLE }}"
+   
     
     # - name: Log in to Docker Hub
     #   uses: docker/login-action@v3
