--- a/.github/workflows/gcpcicd.yaml
+++ b/.github/workflows/gcpcicd.yaml
@@ -7,7 +7,6 @@ on:
     branches: [ main ]
 
 env:
-  docker_username: ${{ secrets.DOCKER_USERNAME }}
   image: gcpsantanubhunia/dotnetapp:v4
 
 jobs:
@@ -17,24 +16,22 @@ jobs:
     steps:
     - uses: actions/checkout@v4 # Checks out your repository code
 
-    - name: Use variable
+    - name: Variable 
       run: |
-        echo "$docker_username"        
-        echo "$image"
-   
+        echo "Variable Data $image"
     
-    # - name: Log in to Docker Hub
-    #   uses: docker/login-action@v3
-    #   with:
-    #     username: ${{ secrets.env }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # - name: Build and push Docker image
-    #   uses: docker/build-push-action@v5
-    #   with:
-    #     context: .
-    #     push: true
-    #     tags: ${{ env.image }}
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: gcpsantanubhunia/dotnetapp:v4
 
   # Optional: Add a deployment job if you want to deploy to a specific environment
   # deploy:
