--- a/.github/workflows/gcpcicd.yaml
+++ b/.github/workflows/gcpcicd.yaml
@@ -19,20 +19,31 @@ jobs:
     - name: Variable 
       run: |
         echo "Variable Data $image"
-    
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Login to DockerHub Registry
+      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: gcpsantanubhunia/dotnetapp:v4
+      run: |
+        docker build -t gcpsantanubhunia/dotnetapp:v5 .
+        docker push gcpsantanubhunia/dotnetapp:v5
 
+
+
+    # - name: Log in to Docker Hub
+    #   uses: docker/login-action@v3
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # - name: Build and push Docker image
+    #   uses: docker/build-push-action@v5
+    #   with:
+    #     context: .
+    #     push: true
+    #     tags: gcpsantanubhunia/dotnetapp:v4
+
+  
   # Optional: Add a deployment job if you want to deploy to a specific environment
   # deploy:
   #   needs: build-and-test # Ensures deployment only runs after successful build and tests
