--- a/.github/workflows/gcpcicd.yaml
+++ b/.github/workflows/gcpcicd.yaml
@@ -2,7 +2,7 @@ name: GCP .NET Core CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ abc ]
   pull_request:
     branches: [ main ]
 
@@ -20,15 +20,13 @@ jobs:
       run: |
         echo "Variable Data $image"
 
-    - name: Login to DockerHub Registry
-      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    # - name: Login to DockerHub Registry
+    #   run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-    - name: Build and push Docker image
-      run: |
-        docker build -t gcpsantanubhunia/dotnetapp:v5 .
-        docker push gcpsantanubhunia/dotnetapp:v5
-
-
+    # - name: Build and push Docker image
+    #   run: |
+    #     docker build -t gcpsantanubhunia/dotnetapp:v5 .
+    #     docker push gcpsantanubhunia/dotnetapp:v5
 
     # - name: Log in to Docker Hub
     #   uses: docker/login-action@v3
