--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -10,7 +10,7 @@ env:
   GKE_CLUSTER: dotnetapp-cluster    # Add your cluster name here.
   GKE_ZONE: us-central1-c   # Add your cluster zone here.
   DEPLOYMENT_NAME: dotnetapp-gke # Add your deployment name here.
-  IMAGE: gcpsantanubhunia/dotnetapp:v5
+  IMAGE: static-site
 
 jobs:
   setup-build-publish-deploy:
@@ -23,18 +23,21 @@ jobs:
       uses: actions/checkout@v4
 
     # Setup gcloud CLI
-    - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+    - name: Setup gcloud CLI
+      uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
 
     # Configure Docker to use the gcloud command-line tool as a credential
     # helper for authentication
-    - run: |-
+    - name: configure-docker
+      run: |-
         gcloud --quiet auth configure-docker
 
     # Get the GKE credentials so we can deploy to the cluster
-    - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
+    - neme: Get the GKE credentials so we can deploy to the cluster
+      uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
       with:
         cluster_name: ${{ env.GKE_CLUSTER }}
         location: ${{ env.GKE_ZONE }}
