--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -1,72 +1,56 @@
-name: Build and Deploy to GKE
+    name: Deploy .NET Core to GKE
 
-on:
-  push:
-    branches:
-      - main
+    on:
+      push:
+        branches:
+          - main
 
-env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: dotnetapp-cluster    # Add your cluster name here.
-  GKE_ZONE: us-central1-c   # Add your cluster zone here.
-  DEPLOYMENT_NAME: dotnetapp-gke # Add your deployment name here.
-  IMAGE: static-site
+    env:
+      DOCKER_IMAGE_NAME: gcpsantanubhunia/dotnetapp
+      GKE_CLUSTER: dotnetapp-cluster
+      GKE_ZONE: us-central1-c
+      DEPLOYMENT_NAME: dotnetapp-gke
 
-jobs:
-  setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy
-    runs-on: ubuntu-latest
-    environment: production
+    jobs:
+      build-and-deploy:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout code
+            uses: actions/checkout@v4
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+          # - name: Set up .NET
+          #   uses: actions/setup-dotnet@v4
+          #   with:
+          #     dotnet-version: '8.0.x' # Or your specific .NET Core version
 
-    # Setup gcloud CLI
-    - name: Setup gcloud CLI
-      uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
-      with:
-        service_account_key: ${{ secrets.GKE_SA_KEY }}
-        project_id: ${{ secrets.GKE_PROJECT }}
+          # - name: Build and Publish .NET Core App
+          #   run: dotnet publish YourApp.csproj -c Release -o publish
 
-    # # Configure Docker to use the gcloud command-line tool as a credential
-    # # helper for authentication
-    # - name: configure-docker
-    #   run: |-
-    #     gcloud --quiet auth configure-docker
+          - name: Login to Docker Hub
+            uses: docker/login-action@v3
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_TOKEN }}
 
-    # # Get the GKE credentials so we can deploy to the cluster
-    # - neme: Get the GKE credentials so we can deploy to the cluster
-    #   uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
-    #   with:
-    #     cluster_name: ${{ env.GKE_CLUSTER }}
-    #     location: ${{ env.GKE_ZONE }}
-    #     credentials: ${{ secrets.GKE_SA_KEY }}
+          - name: Build and Push Docker Image
+            uses: docker/build-push-action@v5
+            with:
+              context: .
+              push: true
+              tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
 
-    # # Build the Docker image
-    # - name: Build
-    #   run: |-
-    #     docker build \
-    #       --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-    #       --build-arg GITHUB_SHA="$GITHUB_SHA" \
-    #       --build-arg GITHUB_REF="$GITHUB_REF" \
-    #       .
+          - name: Authenticate to Google Cloud
+            uses: google-github-actions/auth@v2
+            with:
+              credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-    # # Push the Docker image to Google Container Registry
-    # - name: Publish
-    #   run: |-
-    #     docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+          - name: Set up GKE credentials
+            uses: google-github-actions/get-gke-credentials@v2
+            with:
+              cluster_name: ${{ env.GKE_CLUSTER }}
+              zone: ${{ env.GKE_ZONE }}
 
-    # # Set up kustomize
-    # - name: Set up Kustomize
-    #   run: |-
-    #     curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-    #     chmod u+x ./kustomize
-
-    # # Deploy the Docker image to the GKE cluster
-    # - name: Deploy
-    #   run: |-
-    #     ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
-    #     ./kustomize build . | kubectl apply -f -
-    #     kubectl rollout status deployment/$DEPLOYMENT_NAME
-    #     kubectl get services -o wide
+          - name: Deploy to GKE
+            run: |
+              kubectl apply -f deployment.yaml
+              kubectl apply -f service.yaml
