--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -30,7 +30,7 @@
             uses: docker/login-action@v3
             with:
               username: ${{ secrets.DOCKER_USERNAME }}
-              password: ${{ secrets.DOCKER_TOKEN }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
 
           - name: Build and Push Docker Image
             uses: docker/build-push-action@v5
@@ -42,7 +42,7 @@
           - name: Authenticate to Google Cloud
             uses: google-github-actions/auth@v2
             with:
-              credentials_json: ${{ secrets.GCP_SA_KEY }}
+              credentials_json: ${{ secrets.GKE_SA_KEY }}
 
           - name: Set up GKE credentials
             uses: google-github-actions/get-gke-credentials@v2
