--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -42,7 +42,7 @@
           - name: Authenticate to Google Cloud
             uses: google-github-actions/auth@v2
             with:
-              credentials_json: ${{ secrets.GKE_SA_KEY }}
+              credentials_json: ${{ secrets.GCE_SA_KEY }}
 
           - name: Set up GKE credentials
             uses: google-github-actions/get-gke-credentials@v2
