--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -7,9 +7,10 @@
 
     env:
       DOCKER_IMAGE_NAME: gcpsantanubhunia/dotnetapp
-      GKE_CLUSTER: dotnetapp-cluster
-      GKE_ZONE: us-central1-c
-      DEPLOYMENT_NAME: dotnetapp-gke
+      PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+      GKE_CLUSTER: dotnetapp-cluster    # Add your cluster name here.
+      GKE_ZONE: us-central1-c   # Add your cluster zone here.
+      DEPLOYMENT_NAME: dotnetapp-gke # Add your deployment name here.
 
     jobs:
       build-and-deploy:
@@ -26,6 +27,8 @@
           # - name: Build and Publish .NET Core App
           #   run: dotnet publish YourApp.csproj -c Release -o publish
 
+         
+
           - name: Login to Docker Hub
             uses: docker/login-action@v3
             with:
@@ -38,17 +41,20 @@
               context: .
               push: true
               tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
-
-          - name: Authenticate to Google Cloud
-            uses: google-github-actions/auth@v2
+          
+          # Setup gcloud CLI
+          - name: Setup gcloud CLI
+            uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
             with:
-              credentials_json: ${{ secrets.GCE_SA_KEY }}
+              service_account_key: ${{ secrets.GCE_SA_KEY }}
+              project_id: ${{ secrets.GKE_PROJECT }}
 
-          - name: Set up GKE credentials
-            uses: google-github-actions/get-gke-credentials@v2
+          - neme: Get the GKE credentials so we can deploy to the cluster
+            uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
             with:
               cluster_name: ${{ env.GKE_CLUSTER }}
-              zone: ${{ env.GKE_ZONE }}
+              location: ${{ env.GKE_ZONE }}
+              credentials: ${{ secrets.GCE_SA_KEY }}
 
           - name: Deploy to GKE
             run: |
