--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -6,11 +6,10 @@
           - main
 
     env:
-      DOCKER_IMAGE_NAME: gcpsantanubhunia/dotnetapp
-      PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-      GKE_CLUSTER: dotnetapp-cluster    # Add your cluster name here.
-      GKE_ZONE: us-central1-c   # Add your cluster zone here.
-      DEPLOYMENT_NAME: dotnetappgke # Add your deployment name here.
+      DOCKER_IMAGE_NAME: your-dockerhub-username/your-repo-name
+      GKE_CLUSTER: your-gke-cluster-name
+      GKE_ZONE: your-gke-cluster-zone
+      DEPLOYMENT_NAME: your-app-deployment-name
 
     jobs:
       build-and-deploy:
@@ -19,44 +18,4 @@
           - name: Checkout code
             uses: actions/checkout@v4
 
-          # - name: Set up .NET
-          #   uses: actions/setup-dotnet@v4
-          #   with:
-          #     dotnet-version: '8.0.x' # Or your specific .NET Core version
-
-          # - name: Build and Publish .NET Core App
-          #   run: dotnet publish YourApp.csproj -c Release -o publish
-
          
-
-          - name: Login to Docker Hub
-            uses: docker/login-action@v3
-            with:
-              username: ${{ secrets.DOCKER_USERNAME }}
-              password: ${{ secrets.DOCKER_PASSWORD }}
-
-          - name: Build and Push Docker Image
-            uses: docker/build-push-action@v5
-            with:
-              context: .
-              push: true
-              tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
-          
-          # Setup gcloud CLI
-          - name: Setup gcloud CLI
-            uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
-            with:
-              service_account_key: ${{ secrets.GCE_SA_KEY }}
-              project_id: ${{ secrets.GKE_PROJECT }}
-
-          - neme: Get the GKE credentials so we can deploy to the cluster
-            uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
-            with:
-              cluster_name: ${{ env.GKE_CLUSTER }}
-              location: ${{ env.GKE_ZONE }}
-              credentials: ${{ secrets.GCE_SA_KEY }}
-
-          - name: Deploy to GKE
-            run: |
-              kubectl apply -f deployment.yaml
-              kubectl apply -f service.yaml
