--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -6,10 +6,11 @@
           - main
 
     env:
-      DOCKER_IMAGE_NAME: your-dockerhub-username/your-repo-name
-      GKE_CLUSTER: your-gke-cluster-name
-      GKE_ZONE: your-gke-cluster-zone
-      DEPLOYMENT_NAME: your-app-deployment-name
+      DOCKER_IMAGE_NAME: gcpsantanubhunia/dotnetapp
+      PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+      GKE_CLUSTER: dotnetapp-cluster    # Add your cluster name here.
+      GKE_ZONE: us-central1-c   # Add your cluster zone here.
+      DEPLOYMENT_NAME: dotnetappgke # Add your deployment name here.
 
     jobs:
       build-and-deploy:
@@ -17,5 +18,18 @@
         steps:
           - name: Checkout code
             uses: actions/checkout@v4
+
+          - name: Login to Docker Hub
+            uses: docker/login-action@v3
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+
+          - name: Build and Push Docker Image
+            uses: docker/build-push-action@v5
+            with:
+              context: .
+              push: true
+              tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
 
          
