--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -18,18 +18,31 @@
         steps:
           - name: Checkout code
             uses: actions/checkout@v4
-
           - name: Login to Docker Hub
             uses: docker/login-action@v3
             with:
               username: ${{ secrets.DOCKER_USERNAME }}
               password: ${{ secrets.DOCKER_PASSWORD }}
-
           - name: Build and Push Docker Image
             uses: docker/build-push-action@v5
             with:
               context: .
               push: true
               tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
+          - name: Setup gcloud CLI
+            uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+            with:
+              service_account_key: ${{ secrets.GCE_SA_KEY }}
+              project_id: ${{ secrets.GKE_PROJECT }}
+          - neme: Get the GKE credentials so we can deploy to the cluster
+            uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
+            with:
+              cluster_name: ${{ env.GKE_CLUSTER }}
+              location: ${{ env.GKE_ZONE }}
+              credentials: ${{ secrets.GCE_SA_KEY }}
+          - name: Deploy to GKE
+            run: |
+              kubectl apply -f deployment.yaml
+              kubectl apply -f service.yaml
 
          
