--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -23,12 +23,12 @@
             with:
               username: ${{ secrets.DOCKER_USERNAME }}
               password: ${{ secrets.DOCKER_PASSWORD }}
-          - name: Build and Push Docker Image
-            uses: docker/build-push-action@v5
-            with:
-              context: .
-              push: true
-              tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
+          # - name: Build and Push Docker Image
+          #   uses: docker/build-push-action@v5
+          #   with:
+          #     context: .
+          #     push: true
+          #     tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
           - name: Setup gcloud CLI
             uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
             with:
