--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -7,7 +7,7 @@
 
     env:
       DOCKER_IMAGE_NAME: gcpsantanubhunia/dotnetapp
-      PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+      PROJECT_ID: ${{ secrets.GCE_PROJECT }}
       GKE_CLUSTER: dotnetapp-cluster    # Add your cluster name here.
       GKE_ZONE: us-central1-c   # Add your cluster zone here.
       DEPLOYMENT_NAME: dotnetappgke # Add your deployment name here.
@@ -33,7 +33,7 @@
             uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
             with:
               service_account_key: ${{ secrets.GCE_SA_KEY }}
-              project_id: ${{ secrets.GKE_PROJECT }}
+              project_id: ${{ secrets.GCE_PROJECT }}
           - name: Get the GKE credentials so we can deploy to the cluster
             uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
             with:
