--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -34,12 +34,19 @@ jobs:
       run: |-
         gcloud --quiet auth configure-docker
 
-    - name: Get the GKE credentials so we can deploy to the cluster
+    - name: Get GKE Credentials
       uses: google-github-actions/get-gke-credentials@v2
       with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
-        location: ${{ env.GKE_ZONE }}
-        project_id: ${{ secrets.GCE_PROJECT }}
+        cluster_name: dotnetapp-cluster
+        location: us-central1-c
+        project_id: gcp-terraform-dotnet
+
+    # - name: Get the GKE credentials so we can deploy to the cluster
+    #   uses: google-github-actions/get-gke-credentials@v2
+    #   with:
+    #     cluster_name: ${{ env.GKE_CLUSTER }}
+    #     location: ${{ env.GKE_ZONE }}
+    #     project_id: ${{ secrets.GCE_PROJECT }}
 
     # # Build the Docker image
     # - name: Build
