--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -28,18 +28,30 @@ jobs:
         service_account_key: ${{ secrets.GCE_SA_KEY }}
         project_id: ${{ secrets.GCE_PROJECT }}
 
-    # Configure Docker to use the gcloud command-line tool as a credential
-    # helper for authentication
-    - name: Authentication
-      run: |-
-        gcloud --quiet auth configure-docker
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCE_SA_KEY }}
 
     - name: Get GKE Credentials
       uses: google-github-actions/get-gke-credentials@v2
       with:
         cluster_name: dotnetapp-cluster
         location: us-central1-c
-        project_id: gcp-terraform-dotnet
+        project_id: ${{ secrets.GCE_PROJECT }}
+
+    # # Configure Docker to use the gcloud command-line tool as a credential
+    # # helper for authentication
+    # - name: Authentication
+    #   run: |-
+    #     gcloud --quiet auth configure-docker
+
+    # - name: Get GKE Credentials
+    #   uses: google-github-actions/get-gke-credentials@v2
+    #   with:
+    #     cluster_name: dotnetapp-cluster
+    #     location: us-central1-c
+    #     project_id: gcp-terraform-dotnet
 
     # - name: Get the GKE credentials so we can deploy to the cluster
     #   uses: google-github-actions/get-gke-credentials@v2
