--- a/.github/workflows/deploy-to-gce.yaml
+++ b/.github/workflows/deploy-to-gce.yaml
@@ -3,7 +3,7 @@ name: Deploy .NET Core to GKE
 on:
   push:
     branches:
-      - main
+      - xyz
 
 env:
   PROJECT_ID: ${{ secrets.GCE_PROJECT }}
@@ -28,10 +28,10 @@ jobs:
         service_account_key: ${{ secrets.GCE_SA_KEY }}
         project_id: ${{ secrets.GCE_PROJECT }}
 
-    - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v2
-      with:
-        credentials_json: ${{ secrets.GCE_SA_KEY }}
+    # - name: Authenticate to Google Cloud
+    #   uses: google-github-actions/auth@v2
+    #   with:
+    #     credentials_json: ${{ secrets.GCE_SA_KEY }}
 
     # - name: Get GKE Credentials
     #   uses: google-github-actions/get-gke-credentials@v2
