--- a/.github/workflows/gke.yaml
+++ b/.github/workflows/gke.yaml
@@ -21,11 +21,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Setup gcloud CLI
-      uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
-      with:
-        service_account_key: ${{ secrets.GCE_SA_KEY }}
-        project_id: ${{ secrets.GCE_PROJECT }}
+    # - name: Setup gcloud CLI
+    #   uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
+    #   with:
+    #     service_account_key: ${{ secrets.GCE_SA_KEY }}
+    #     project_id: ${{ secrets.GCE_PROJECT }}
 
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
