get-gke-credentials

--- a/.github/workflows/github-gke.yaml
+++ b/.github/workflows/github-gke.yaml
@@ -36,7 +36,7 @@ jobs:
 
     # Get the GKE credentials so we can deploy to the cluster
     - name: Get the GKE credentials so we can deploy to the cluster
-      uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
+      uses: google-github-actions/get-gke-credentials@v2
       with:
         cluster_name: dotnetapp-cluster
         location: us-central1-c
