--- a/.github/workflows/github-gke.yaml
+++ b/.github/workflows/github-gke.yaml
@@ -35,7 +35,12 @@ jobs:
         gcloud --quiet auth configure-docker
 
     # Get the GKE credentials so we can deploy to the cluster
-    - name: Get the GKE credentials so we can deploy to the cluster
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCE_SA_KEY }}
+
+    - name: Get GKE Credentials
       uses: google-github-actions/get-gke-credentials@v2
       with:
         cluster_name: dotnetapp-cluster
