--- a/.github/workflows/github-gcp-docker.yaml
+++ b/.github/workflows/github-gcp-docker.yaml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-
+env:
+  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+  IMAGE: dotnetapp
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -26,7 +28,7 @@ jobs:
       - name: Configure Docker
         run: |
           gcloud --quiet auth configure-docker
-          
+
       - name: Build
         run: |
           docker build \
