docker build and push to ACR

--- a/.github/workflows/github-azure-aks.yaml
+++ b/.github/workflows/github-azure-aks.yaml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
 env:
+  ACR_NAME: acrdotnetapp # Replace with your ACR name
+  IMAGE_NAME: dotnetapp # Replace with your desired image name
   IMAGE: gcpsantanubhunia/dotnetapp:v12
 
 jobs:
@@ -18,13 +20,21 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }} # Or configure OIDC
      
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: acrdotnetapp.azurecr.io/dotnetapp:latest
-          file: ./Dockerfile
+      - name: Build and Tag Docker image
+        run: |
+          docker build -t ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest .
+
+      - name: Push Docker image to ACR
+        run: |
+          docker push ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest
+
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: acrdotnetapp.azurecr.io/dotnetapp:latest
+      #     file: ./Dockerfile
 
       # - name: Build and push Docker image
       #   uses: docker/build-push-action@v5
